# async-rs

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yaml
examples/: send-recv.rs  tokio.rs
src/: async_global_executor.rs  lib.rs  runtime.rs  smol.rs  tokio.rs
src/implementors/: async_global_executor.rs  async_io.rs  hickory.rs  mod.rs  noop.rs  smol.rs  tokio.rs
src/sys/: unix.rs  windows.rs
src/traits/: addr.rs  executor.rs  mod.rs  reactor.rs  runtime.rs
src/util/: addr.rs  block_on.rs  future.rs  io.rs  mod.rs  runtime.rs  task.rs  tokio.rs
tests/: send-recv.rs
