[package]
name = "async-rs"
version = "0.1.0"
edition = "2024"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "Async runtime abstration"
repository = "https://github.com/amqp-rs/async-rs"
readme = "README.md"
documentation = "https://docs.rs/async-rs"
keywords = ["async", "await", "futures", "executor"]
categories = ["asynchronous", "concurrency"]
license = "BSD-2-Clause"
rust-version = "1.85.0"

[features]
default = ["tokio"]
smol = ["dep:smol"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "^0.1.89"

[dependencies.smol]
version = "^2.0"
optional = true

[dependencies.tokio]
version = "^1.47"
optional = true
default-features = false
features = ["rt-multi-thread"]

[badges]
maintenance = { status = "actively-developed" }
